# s2n-tls

./: .gitignore  flake.nix
.github/: trigger.md
.github/workflows/: main.yml  perf_dashboard.yml  regression_ci.yml
bindings/rust/s2n-tls/: Cargo.toml
bindings/rust/s2n-tls-sys/: README.md
bindings/rust/standard/integration/src/: capability_check.rs
codebuild/spec/: buildspec_integv2_nix.yml  buildspec_rust_nix.yml
doxygen/: deprecated.html  dir_0188a3e6da905bc60aceb35bf790b8c9.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  pages.html  s2n_8h.html  s2n_8h_source.html
nix/: devshells.nix  shell.sh
stuffer/: s2n_stuffer.c
tests/regression/: Cargo.toml  README.md  run_harnesses.sh
tests/regression/emit_metrics/: Cargo.toml
tests/regression/emit_metrics/src/: main.rs
tests/regression/handshake/: Cargo.toml
tests/regression/handshake/src/: main.rs
tests/regression/perf_outputs/: cert_creation.out  cleanup_connection_annotate.txt  config_configure.out  config_configure_annotated.txt  config_create.out  config_create_annotated.txt  create_cert_annotated.txt  data_transfer.out  data_transfer_annotated.txt  ecdsa_handshake.out  ecdsa_handshake_annotated.txt  resumption.out  resumption_annotated.txt  rsa_handshake.out  rsa_handshake_annotated.txt
tests/regression/src/: Cargo.toml  lib.rs
